--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -221,7 +221,7 @@
                   <img src="https://upload.wikimedia.org/wikipedia/commons/9/91/Octicons-mark-github.svg" alt="GitHub Logo"/>
                   <span class="link-label">GitHub</span>
                 </a>
-                <a class="project-link demo-link" href="https://chordwizard-demo.web.app" target="_blank" rel="noopener">
+                <a class="project-link demo-link" href="https://www.youtube.com/watch?v=Afs9eBOozkk&ab_channel=AyanJhunjhunwala" target="_blank" rel="noopener">
                   <img src="https://upload.wikimedia.org/wikipedia/commons/0/09/YouTube_full-color_icon_%282017%29.svg" alt="Demo"/>
                   <span class="link-label">Demo</span>
                 </a>
@@ -245,7 +245,7 @@
                 <a class="project-link github-link" href="https://github.com/AyanJhunjhunwala/RedditReviewer" target="_blank" rel="noopener">
                   <img src="https://upload.wikimedia.org/wikipedia/commons/9/91/Octicons-mark-github.svg" alt="GitHub Logo"/>
                   <span class="link-label">GitHub</span>
-                </a>
+                  </a>
               </div>
             </div>
             
@@ -291,7 +291,7 @@
                 <a class="project-link github-link" href="https://github.com/AyanJhunjhunwala/optionspricing" target="_blank" rel="noopener">
                   <img src="https://upload.wikimedia.org/wikipedia/commons/9/91/Octicons-mark-github.svg" alt="GitHub Logo"/>
                   <span class="link-label">GitHub</span>
-                </a>
+                  </a>
               </div>
             </div>
             
